# ferro

./: .gitignore  README.md  ferro.cabal  flake.nix
exe/: Main.hs
lib/: Ferro.hs
nix/: overlay.nix
nix/overlays/: calibre.nix  haskell.nix
