cabal-version: 2.2

name:        ferro
version:     0.1.0.0
-- synopsis:
-- description:
author:      Evan Relf <evan@evanrelf.com>
maintainer:  Evan Relf <evan@evanrelf.com>
homepage:    https://github.com/evanrelf/ferro
-- license:
copyright:   2021 Evan Relf


common common
  build-depends:
    , base
    , relude >= 0.7.0.0  && < 0.8

  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

  default-language: Haskell2010

  default-extensions:
    -- GHC2021 (https://git.io/JsCTl)
    BangPatterns BinaryLiterals ConstrainedClassMethods ConstraintKinds
    DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift
    DeriveTraversable EmptyCase EmptyDataDeriving ExistentialQuantification
    ExplicitForAll FlexibleContexts FlexibleInstances GADTSyntax
    GeneralisedNewtypeDeriving HexFloatLiterals ImportQualifiedPost InstanceSigs
    KindSignatures MultiParamTypeClasses NamedFieldPuns NamedWildCards
    NumericUnderscores PolyKinds PostfixOperators RankNTypes ScopedTypeVariables
    StandaloneDeriving StandaloneKindSignatures TupleSections TypeApplications
    TypeOperators TypeSynonymInstances
    -- Extra
    BlockArguments
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wredundant-constraints


common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N


library
  import: common

  hs-source-dirs: lib

  build-depends:
    , conduit
    , pandoc
    , readability
    , req
    , req-conduit
    , smtp-mail
    , unliftio
    , xml-conduit

  exposed-modules:
    Ferro


executable ferro
  import:
    , common
    , executable

  main-is: Main.hs

  hs-source-dirs: exe

  build-depends:
    , ferro
